--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -50,7 +50,6 @@
 @media (min-width: $medium-device) {
     .container {
         width: 90%;
-        overflow-x: hidden; //remove me
     }
     .col {
         margin-bottom: 0;
